syntax = "proto3";

package hardwaremonitoring;

option go_package=".;hardwaremonitoring";


message HardwareStats {
    int32 cpu = 1;
    int32 memory_free = 2;
    int32 memory_used = 3;
    int32 memory_total = 4;
    int32 uptime_seconds = 5;
}

message EmptyRequest {}


service HardwareMonitor{
    rpc Monitor(EmptyRequest) returns (stream HardwareStats) {};
}